# internal/router/events.go
@@ -12,8 +12,12 @@ func eventRoutes(e *echo.Group) {
 	events.Use(jwtMiddelware)
   events.GET("",h.Get)
   events.GET("/event/event/get/:id",h.Get)
-  events.GET("/event/event/search",h.Get)
+  events.GET("/event/acheivment/get/:id",h.GetAcheivment)
+  events.POST("/event/acheivment/create",h.CreateAcheivment)
+  events.GET("/event/event/search",h.Search)
   events.POST("/create",h.Create)
 	events.POST("/event/:id/upload",h.AddImage)
+  events.DELETE("/event/acheivment/:id/delete",h.DeleteAcheivment)
+
 
 }
